--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -27,7 +27,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '<enter your client id here>',
+        'client_id': 'df83b563-9221-44c3-94bc-cd8134e391cd',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
